--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "test": "jest -env=jsdom --watch"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1",
+    "redux-promise": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -21,6 +25,7 @@
     "@types/jest": "^26.0.24",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/redux-promise": "^0.5.29",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "@vitejs/plugin-react-refresh": "^1.3.1",
@@ -36,6 +41,7 @@
     "jest": "^27.0.6",
     "prettier-eslint": "^13.0.0",
     "prettier-eslint-cli": "^5.0.1",
+    "redux-devtools-extension": "^2.13.9",
     "ts-jest": "^27.0.4",
     "typescript": "^4.3.2",
     "vite": "^2.4.4"
