--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
-    "redux-promise": "^0.6.0"
+    "redux-saga": "^1.1.3",
+    "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
