--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
     "react": "^17.0.0",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.1.1",
     "redux-saga": "^1.1.3",
     "typesafe-actions": "^5.1.0"
@@ -26,6 +29,7 @@
     "@types/jest": "^26.0.24",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.8",
     "@types/redux-promise": "^0.5.29",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
@@ -43,6 +47,7 @@
     "prettier-eslint": "^13.0.0",
     "prettier-eslint-cli": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
+    "sass": "^1.38.1",
     "ts-jest": "^27.0.4",
     "typescript": "^4.3.2",
     "vite": "^2.4.4"
