--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
+    "classnames": "^2.3.1",
     "react": "^17.0.0",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "react-select": "^4.3.1",
     "redux": "^4.1.1",
     "redux-saga": "^1.1.3",
     "typesafe-actions": "^5.1.0"
@@ -30,6 +32,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-select": "^4.0.17",
     "@types/redux-promise": "^0.5.29",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
