--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.0.6",
+    "babel-plugin-transform-vite-meta-env": "^1.0.3",
     "babel-preset-react-app": "^10.0.0",
     "eslint": "^7.31.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -58,6 +59,7 @@
   "babel": {
     "env": {
       "test": {
+        "plugins": ["babel-plugin-transform-vite-meta-env"],
         "presets": [
           "react-app"
         ]
