--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^27.0.6",
+    "msw": "^0.35.0",
     "prettier-eslint": "^13.0.0",
     "prettier-eslint-cli": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
@@ -59,7 +60,9 @@
   "babel": {
     "env": {
       "test": {
-        "plugins": ["babel-plugin-transform-vite-meta-env"],
+        "plugins": [
+          "babel-plugin-transform-vite-meta-env"
+        ],
         "presets": [
           "react-app"
         ]
